# battery_tester_github_actions

./: .gitignore  LICENSE  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test_tox_ci.yaml
docs/: capacity_calculation.xlsx  overview_database.graphml  overview_modules.graphml
src/battery_tester/: __init__.py  db_sqlite.py  main.py  testrun.py  tf_connection.py  tf_mock.py
src/battery_tester/gui/: tkinter_app.py
tests/: test_project_structure.py
